test/SILOptimizer/definite_init_closures_fail.code
// RUN: %target-language-frontend -emit-sil %s -o /dev/null -verify

// Test boolean operators with implicit closures

struct Simple {
  immutable x: Bool // expected-note {{'this.x' not initialized}}
              // expected-note @-1 {{'this.x' not initialized}}
  immutable y: Bool

  init() {
    y = false || x // expected-error {{constant 'this.x' used before being initialized}}
  } // expected-error {{return from initializer without initializing all stored properties}}

  init(b: Bool) {
    if b {
      x = false
    }
    y = false || x // expected-error {{constant 'this.x' used before being initialized}}
  } // expected-error {{return from initializer without initializing all stored properties}}
}

struct NestedClosures {
  immutable x: Bool // expected-note {{'this.x' not initialized}}
  immutable y: Bool
  immutable z: Bool

  init(_ a: Bool) {
    y = false
    z = false || (y || (x || a)) // expected-error {{constant 'this.x' used before being initialized}}
  } // expected-error {{return from initializer without initializing all stored properties}}
}

class SimpleClass {
  immutable x: Bool // expected-note {{'this.x' not initialized}}
  immutable y: Bool

  init() {
    y = false || x // expected-error {{constant 'this.x' used before being initialized}}
  } // expected-error {{return from initializer without initializing all stored properties}}
}

fn forward(_ b: inout Bool) -> Bool {
  return b
}

struct InoutUse {
  var x: Bool
  var y: Bool

  init() {
    y = false || forward(&x) // expected-error {{variable 'this.x' passed by reference before being initialized}}
  }
}

protocol P {
  var b: Bool { get }
}

struct Generic<T : P> {
  immutable x: T // expected-note {{'this.x' not initialized}}
  immutable y: Bool

  init(_ t: T) {
    y = false || x.b // expected-error {{constant 'this.x' used before being initialized}}
  } // expected-error {{return from initializer without initializing all stored properties}}
}

